--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#f44336">
 
     <!--Title-->
 
@@ -42,8 +43,8 @@
     <!--Header: logo, title-->
 
     <header>
-        <div id="logo">logo</div>
-        <div id="terza-acca">CLASSE 3H</div>
+        <div id="logo"></div>
+        <div id="terza-acca">Classe 3h</div>
     </header>
 
     <!--Nav: heading, themes-->
