--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
 
     <!--Metadata-->
@@ -33,7 +33,7 @@
 
     <!--CSS-->
 
-    <link rel="stylesheet" href="./dist/css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/style.min.css">
     
 </head>
 <body>
@@ -54,9 +54,15 @@
     </div>
 
     <div id="nav">
-        <div class="container" id="c1">VIAGGI</div>
-        <div class="container" id="c2">LA 3H</div>
-        <div class="container" id="c3">IL PROGETTO</div>
+        <div class="container" id="c1">
+            <a href="./page/viaggi.html">VIAGGI</a>
+        </div>
+        <div class="container" id="c2">
+            <a href="./page/sogni.html">SOGNI</a>
+        </div>
+        <div class="container" id="c3">
+            <a href="./page/lezioni.html">LEZIONI</a>
+        </div>
     </div>
 
     <!--Main-->
@@ -68,11 +74,11 @@
         <section id="one">
             <h2>La nostra Classe</h2>
 
-            <div class="sect1wrapimg">
+            <div class="img-wrapper">
                 <img src="./img/classe.png" alt="La nostra classe a fumetti."> <!--1280x628-->
             </div>
 
-            <div class="sect1wraptxt">
+            <div class="p-wrapper">
                 <p>Da in alto a sinistra a in basso a destra: Prof. Rosati (francese 2°anno), Luca, Kristar, Michael P., Thomas, Awa, Cristian, Klarisa, Beatrice, Vesa, Michael G., Elisa, Valeria, Assmaa, Bassma, Michelle, Leandro, Billal, Giacomo, Anna, Veronica, Alessia, Gabriela</p>
             </div>
         </section>
