--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--Header: logo, title-->
 
     <header>
-        <div id="logo">3h</div>
+        <div id="logo"></div>
         <div id="terza-acca">Classe 3h</div>
     </header>
 
@@ -75,11 +75,11 @@
             <h2>La nostra Classe</h2>
 
             <div class="img-wrapper">
-                <img src="./img/classe.png" alt="La nostra classe a fumetti."> <!--1280x628-->
+                <img src="./img/classe2.png" alt="La nostra classe a fumetti."> <!--1280x628-->
             </div>
 
             <div class="p-wrapper">
-                <p>Da in alto a sinistra a in basso a destra: Prof. Rosati (francese 2°anno), Luca, Kristar, Michael P., Thomas, Awa, Cristian, Klarisa, Beatrice, Vesa, Michael G., Elisa, Valeria, Assmaa, Bassma, Michelle, Leandro, Billal, Giacomo, Anna, Veronica, Alessia, Gabriela</p>
+                <p>Ordine sparso: Prof.ssa Taglialatela, Luca, Kristar, Michael P., Thomas, Awa, Cristian, Klarisa, Beatrice, Vesa, Michael G., Elisa, Valeria, Assmaa, Bassma, Michelle, Leandro, Billal, Giacomo, Anna, Veronica, Alessia, Gabriela</p>
             </div>
         </section>
 
