--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <!--CSS-->
 
     <link rel="stylesheet" href="./dist/css/style.min.css">
+
+    <!--Icon-->
+
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     
 </head>
 <body>
@@ -86,7 +90,7 @@
     </main>
 
     <footer>
-        <p>Leandecks (c) 2021 - Licensed under <a href="./documents/LICENSE.html">MIT</a> --- <a href="./documents/README.html">README</a></p>
+        <p><a href="http://leandecks.github.io/">Leandecks</a> (c) 2021 - Licensed under <a href="./documents/LICENSE.html">MIT</a> - <a href="https://github.com/leandecks/classe-3h/">Source Code</a></p>
     </footer>
 
     <!--Content: END-->
